# fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  output.md  output_to_user.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: auth.py  items.py
app/core/: config.py  database.py
app/domain/models/: item.py  user.py
app/domain/repository_interfaces/: user_repository.py
app/infrastructure/repositories/: in_memory_item_repository.py  postgres_item_repository.py  postgres_user_repository.py
app/services/: item_service.py
docs/: clean_architecture_concept.md  clean_architecture_qna.md  database_strategy.md  db-security-setup.md  deployment-guide.md
scripts/: init_roles.sql  manual_migrate.sh
specs/006-real-database/: plan.md  spec.md  tasks.md
specs/011-auth-jwt/: plan.md  spec.md  tasks.md
specs/015-cicd-setup/: tasks.md
specs/016-db-security/: plan.md  spec.md  tasks.md
specs/017-dockerize/: plan.md  spec.md
tests/: conftest.py
tests/contract/: test_auth.py  test_items.py
tests/unit/: test_auth_service.py
